--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,14 @@ dependencies:
   intl: any
   get_it: ^7.6.7
   injectable: ^2.3.5
-  auto_route: ^8.0.2
+  auto_route: ^8.0.3
+  shared_preferences: ^2.2.2
+  dio: ^5.4.2+1
+  pretty_dio_logger: ^1.3.1
+  retrofit: '>=4.0.0 <5.0.0'
+  logger: ^2.2.0
+  async: ^2.11.0
+  json_annotation: ^4.8.1
 
 
 dev_dependencies:
@@ -50,6 +57,8 @@ dev_dependencies:
   flutter_lints: ^3.0.2
   injectable_generator: ^2.4.1
   auto_route_generator: ^8.0.0
+  retrofit_generator: '>=7.0.0 <8.0.0'
+  json_serializable: ^6.7.1
   build_runner: ^2.4.9
 
 
